# skill-manager-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FRONTEND_ARCHITECTURE_REPORT.md  README.md  README_zh.md  REVIEW_REPORT.md  UX_REVIEW_COMPREHENSIVE_FINDINGS.md  findings.md  package.json  pnpm-lock.yaml  progress.md  task_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  eslint.config.js  package.json
apps/desktop/src/: App.module.css  App.tsx  api.ts  i18n.ts  index.css  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  utils.rs
apps/desktop/src-tauri/src/commands/: adopt.rs  custom_target.rs  import.rs  mod.rs  scan.rs  skill.rs  target.rs
apps/desktop/src/api/: discover.ts  index.ts  library.ts  system.ts  targets.ts
apps/desktop/src/components/: ConfirmModal.tsx  EmptyState.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  FilterPill.tsx  HealthBadge.tsx  LogoMark.tsx  SearchField.tsx  Skeleton.tsx  ToastProvider.module.css  ToastProvider.tsx  Tooltip.tsx  TopBar.tsx
apps/desktop/src/features/directories/: DirectoriesTab.tsx
apps/desktop/src/features/discover/: AdoptConfirmDialog.tsx  (+12 more)
apps/desktop/src/hooks/: useAppBootstrap.test.ts  useAppBootstrap.ts  useDiscoveryState.ts  useLanguage.ts  useRemoteUpdates.ts  useSkillFilters.test.ts  useSkillFilters.ts  useSkillPreview.ts  useTheme.test.ts  useTheme.ts
apps/desktop/src/locales/: en.json  zh.json
apps/desktop/src/styles/: _animations.module.css  _badges.module.css  _buttons.module.css  _cards.module.css  _forms.module.css  _layout.module.css  _lists.module.css  _navigation.module.css  _panels.module.css  _tooltip.module.css
apps/desktop/src/test/: i18n.test.ts
apps/desktop/src/types/: api.ts  core.ts  index.ts  ui.ts
crates/skill-manager-cli/: Cargo.toml
crates/skill-manager-cli/src/: main.rs
crates/skill-manager-core/: Cargo.toml
crates/skill-manager-core/src/: index.rs  lib.rs  models.rs  scan.rs
docs/: development-priorities.md  product-blueprint.md  prompt-hub-research.md  skill-manager-prd.md  ui-design-spec.md
reviews/: 00-index.md  01-frontend.md  02-rust-backend.md  03-visual-design.md  04-ux-product.md  05-infra-roadmap.md
(+6 files in other folders)
