[workspace]
members = [
  "crates/skill-manager-core",
  "crates/skill-manager-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["apple"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tauri = { version = "2.10.3", features = [] }
tauri-build = { version = "2.5.6", features = [] }
thiserror = "2.0.17"
walkdir = "2.5.0"
