[workspace]
members = [
  "crates/skill-manager-core",
  "crates/skill-manager-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["apple"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.19"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-build = { version = "2.5.6", features = [] }
tauri-plugin-dialog = "2.6.0"
thiserror = "2.0.17"
tracing = "0.1"
walkdir = "2.5.0"
