[package]
name = "skill-manager-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
